Update CHAVE_DUPLA to a new value
Mudança da chave dupla

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 };
         firebase.initializeApp(firebaseConfig);
         const db = firebase.database();
-        const CHAVE_DUPLA = "nossa_chave_secreta_unica"; 
+        const CHAVE_DUPLA = "26-01-2025"; 
 
         // --- LÓGICA DE IDENTIFICAÇÃO ---
         let meuNome = localStorage.getItem('meuNome');
