--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@ import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/fireba
 import { getDatabase, ref, push, onChildAdded, set } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 import { getAuth, GoogleAuthProvider, signInWithPopup, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
 
-const firebaseConfig={
-apiKey:"COLOQUE_AQUI",
-authDomain:"COLOQUE_AQUI",
-databaseURL:"COLOQUE_AQUI",
-projectId:"COLOQUE_AQUI",
-storageBucket:"COLOQUE_AQUI",
-messagingSenderId:"COLOQUE_AQUI",
-appId:"COLOQUE_AQUI"
+const firebaseConfig = {
+  apiKey: "AIzaSyAsK3kEuustv7KyoQXR0Ep-whTpDCDa03w",
+  authDomain: "manuu-c23a7.firebaseapp.com",
+  databaseURL: "https://manuu-c23a7-default-rtdb.firebaseio.com",
+  projectId: "manuu-c23a7",
+  storageBucket: "manuu-c23a7.firebasestorage.app",
+  messagingSenderId: "378235951611",
+  appId: "1:378235951611:web:72c855fbb5ccdb1a84535e",
+  measurementId: "G-2V1EXW1794"
 };
-
 const app=initializeApp(firebaseConfig);
 const db=getDatabase(app);
 const auth=getAuth();
