--- a/index.html
+++ b/index.html
@@ -110,15 +110,15 @@
 
 <script>
     const firebaseConfig = {
-        apiKey: "AIzaSyAsK3kEuustv7KyoQXR0Ep-whTpDCDa03w",
-        authDomain: "manuu-c23a7.firebaseapp.com",
-        databaseURL: "https://manuu-c23a7-default-rtdb.firebaseio.com",
-        projectId: "manuu-c23a7",
-        storageBucket: "manuu-c23a7.firebasestorage.app",
-        messagingSenderId: "378235951611",
-        appId: "1:378235951611:web:72c855fbb5ccdb1a84535e"
-    };
-
+  apiKey: "AIzaSyAsK3kEuustv7KyoQXR0Ep-whTpDCDa03w",
+  authDomain: "manuu-c23a7.firebaseapp.com",
+  databaseURL: "https://manuu-c23a7-default-rtdb.firebaseio.com",
+  projectId: "manuu-c23a7",
+  storageBucket: "manuu-c23a7.firebasestorage.app",
+  messagingSenderId: "378235951611",
+  appId: "1:378235951611:web:72c855fbb5ccdb1a84535e",
+  measurementId: "G-2V1EXW1794"
+};
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
     const auth = firebase.auth();
@@ -276,4 +276,5 @@
     function apagar(c) { if(confirm("Apagar?")) db.ref(c).remove(); }
 </script>
 </body>
+    
 </html>
